Bug 1197192 - Allow dragging the scrubber not just from the timeline header; r=ochameau
This adds a new invisible element centered around the scrubber and
thick enough for users to drag from.

UltraBlame original commit: 36ade4d3ed365e7d3dd76b780f5b6c37eca3aab0

--- a/devtools/client/themes/animationinspector.css
+++ b/devtools/client/themes/animationinspector.css
@@ -922,6 +922,52 @@ animation
 -
 timeline
 .
+scrubber
+.
+scrubber
+-
+handle
+{
+position
+:
+absolute
+;
+height
+:
+100
+%
+;
+top
+:
+0
+;
+width
+:
+6px
+;
+right
+:
+-
+3px
+;
+cursor
+:
+col
+-
+resize
+;
+pointer
+-
+events
+:
+all
+;
+}
+.
+animation
+-
+timeline
+.
 time
 -
 header
